# main.go
@@ -2,13 +2,16 @@ package main
 
 import (
 	"context"
+	"fmt"
 	"log"
 	"net/http"
 	"os"
 
 	"github.com/SapolovichSV/durak/auth/internal/config"
 	"github.com/SapolovichSV/durak/auth/internal/entities/user"
-	"github.com/SapolovichSV/durak/auth/internal/http/controller"
+	"github.com/SapolovichSV/durak/auth/internal/http/handlers"
+	"github.com/SapolovichSV/durak/auth/internal/http/handlers/login"
+	"github.com/SapolovichSV/durak/auth/internal/http/handlers/register"
 	"github.com/SapolovichSV/durak/auth/internal/http/middleware"
 	"github.com/SapolovichSV/durak/auth/internal/http/server"
 	"github.com/SapolovichSV/durak/auth/internal/logger"
@@ -18,6 +21,9 @@ import (
 )
 
 const pathToYamlConfig = "./config.yaml"
+
+// TODO make secretKey really secret
+const secretKey = "123"
 
 // TODO Graceful shutdown
 // TODO Handlers
@@ -32,9 +38,8 @@ const pathToYamlConfig = "./config.yaml"
 //	@description	This is a auth service for my durak online.
 //	@termsOfService
 
-//	@host		localhost:8082
-//	@BasePath	/api/v1
-
+// @host		localhost:8082
+// @BasePath	/api/v1
 func main() {
 	ctx := context.Background()
 	config, err := config.Build(pathToYamlConfig)
@@ -54,10 +59,18 @@ func main() {
 	mux.Handle("/swagger/", httpSwagger.Handler(
 		httpSwagger.URL("http://localhost:8082/swagger/doc.json"),
 	))
-	//TODO ::::::::::::WARNING MOCKS
-	controller := controller.New(ctx, logger.WithGroup("controller"), &mockRepo{}, &mockCookier{}, "123")
 
-	mux.Handle("POST /auth/register", mw.Logging(http.HandlerFunc(controller.Register)))
+	//TODO ::::::::::::WARNING MOCKS
+	servicesAggregator := handlers.New(ctx, logger, &mockRepo{}, &mockCookier{}, secretKey)
+
+	mux.Handle(
+		"POST /auth/register",
+		mw.Logging(http.HandlerFunc(login.New(*servicesAggregator).Login)),
+	)
+	mux.Handle(
+		"POST /auth/login",
+		mw.Logging(http.HandlerFunc(register.New(*servicesAggregator).Register)),
+	)
 
 	server := server.New(config, mux)
 	if err := server.ListenAndServe(); err != nil {
@@ -76,7 +89,7 @@ func pingHandler(w http.ResponseWriter, r *http.Request) {
 // TODO DELETE
 type mockRepo struct{}
 
-func (r *mockRepo) AddUser(ctx context.Context, user user.User) error {
+func (r *mockRepo) AddUser(ctx context.Context, email, username, password string) error {
 	return nil
 }
 func (r *mockRepo) GetUser(username string) {
@@ -88,6 +101,10 @@ func (r *mockRepo) DeleteUser() {
 func (r *mockRepo) UpdateUser() {
 	return
 }
+func (r *mockRepo) UserByEmailAndPassword(email string, password string) (user.User, error) {
+	fmt.Print("mockRepo UserByEmailAndPassword")
+	return user.User{}, nil
+}
 
 // TODO DELETE
 type mockCookier struct{}
@@ -95,8 +112,9 @@ type mockCookier struct{}
 func (c *mockCookier) Auth() {
 
 }
-func (c *mockCookier) Login() {
-
+func (c *mockCookier) Login(user user.User, w http.ResponseWriter) error {
+	fmt.Print("mockCookie Login")
+	return nil
 }
 func (c *mockCookier) Logout() {
 
